--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
 
    <body>
 
+      <div data-number="23">Here, there is a number storaged.</div>
 
       <!-- Si tenéis jQuery importado a vuestro proyecto y os aparece este error con muchas
       de sus funciones, slideUp, slideDown, slideToggle etc… es porque seguramente
