--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 
    <body>
 
-      <div data-number="23">Here, there is a number storaged.</div>
+      <div id="firstDiv" data-number="23">Click here to get the data, number storaged.</div>
 
       <!-- Si tenéis jQuery importado a vuestro proyecto y os aparece este error con muchas
       de sus funciones, slideUp, slideDown, slideToggle etc… es porque seguramente
