--- a/index.html
+++ b/index.html
@@ -11,16 +11,17 @@
 
    <body>
 
-      <div id="firstDiv" data-number="23">Click here to get the data, number storaged.</div>
+      <div id="firstDiv" data-number="23">Click here to get the data:number, storaged.</div>
+      <br>
 
-      <!-- Si tenéis jQuery importado a vuestro proyecto y os aparece este error con muchas
-      de sus funciones, slideUp, slideDown, slideToggle etc… es porque seguramente
-      tengamos importado la “nueva” versión ligera (SLIM) de jQuery. Así que si tenemos
-      importado:-->
-      <script src="
-        https://code.jquery.com/jquery-3.2.1.js"> </script>
-      <script src="index.js">
-      </script>
+      <div id="secondDiv" data-date=12/11/79>Click here to get the data:date, storaged.</div>
+        <!-- Si tenéis jQuery importado a vuestro proyecto y os aparece este error con
+        muchas de sus funciones, slideUp, slideDown, slideToggle etc… es porque
+        seguramente tengamos importado la “nueva” versión ligera (SLIM) de jQuery. Así
+        que si tenemos importado:-->
+         <script src="https://code.jquery.com/jquery-3.2.1.js"> </script>
+         <script src="index.js">
+         </script>
 
    </body>
 
