--- a/index.html
+++ b/index.html
@@ -14,8 +14,18 @@
       <div id="firstDiv" data-number="23">Click here to get the data:number, storaged.</div>
       <br>
 
+
       <div id="secondDiv" data-date=12/11/79>Click here to get the data:date, storaged.</div>
-        <!-- Si tenéis jQuery importado a vuestro proyecto y os aparece este error con
+        <br>
+         <textarea name="textName" rows="8" cols="80"></textarea>
+         <br>
+         <button id="button">Click here to get textarea attribute:name</button>
+
+
+
+
+
+         <!-- Si tenéis jQuery importado a vuestro proyecto y os aparece este error con
         muchas de sus funciones, slideUp, slideDown, slideToggle etc… es porque
         seguramente tengamos importado la “nueva” versión ligera (SLIM) de jQuery. Así
         que si tenemos importado:-->
