--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 
       <div id="secondDiv" data-date=12/11/79>Click here to get the data:date, storaged.</div>
         <br>
-         <textarea name="textName" rows="8" cols="80"></textarea>
+         <textarea data-name="textName" name="name" rows="8" cols="80"></textarea>
          <br>
          <button id="button">Click here to get textarea attribute:name</button>
 
